Added route for contracts explorer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,10 +5,10 @@ html,
 body {
   overscroll-behavior: none;
   height: 100%;
-  background-color: $bg-color;
+  background-color: $yellow;
   font-family: "Signika", sans-serif;
   font-size: 1rem;
   padding: 0px;
   margin: 0px;
-  color: $header-bg-color;
+  color: $black;
 }
