--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,5 +1,5 @@
-$bg-color: #fdd16c;
+$yellow: #fdd16c;
 $dark-yellow: darken(#fdd16c, 15);
-$header-bg-color: #24292e;
+$black: #24292e;
 $orange: #f39750;
 $dark-orange: #834112;
