--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -9,6 +9,12 @@ button {
     font-size: 1rem;
     color: $dark-orange;
     cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      background-color: darken($orange, 10);
+      color: darken($dark-orange, 10);
+    }
   }
 
   &.big {
