--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,4 +11,19 @@ body {
   padding: 0px;
   margin: 0px;
   color: $black;
+  font-size: 1rem;
+}
+
+.general-container {
+  padding: 20px;
+  background-color: $dark-yellow;
+  border: solid 3px $dark-orange;
+  border-radius: 10px;
+}
+
+h1.title {
+  font-size: 1.8rem;
+  margin: 10px;
+  padding: 0px;
+  color: $black;
 }
