--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -1,12 +1,14 @@
 @import "./settings.scss";
 
 button {
+  font-size: 1.1rem;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+
   &.primary {
     background-color: $orange;
-    padding: 10px 20px;
     border: solid 2px transparent;
-    border-radius: 10px;
-    font-size: 1rem;
     color: $dark-orange;
     cursor: pointer;
     transition: 0.3s;
@@ -19,5 +21,21 @@ button {
 
   &.big {
     font-size: 1.5rem;
+  }
+
+  &.dropdown {
+    background-color: $yellow;
+    border: solid 1px $dark-orange;
+    border-radius: 10px;
+    width: 100%;
+    transition: 0.3s;
+    transition-delay: 0.1s;
+
+    &.show-list {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
   }
 }
