--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -5,6 +5,7 @@ button {
   padding: 10px 20px;
   border-radius: 10px;
   cursor: pointer;
+  margin: 0px 10px;
 
   &.primary {
     background-color: $orange;
@@ -30,6 +31,7 @@ button {
     width: 100%;
     transition: 0.3s;
     transition-delay: 0.1s;
+    color: $black;
 
     &.show-list {
       border-top-left-radius: 10px;
