--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,3 +39,10 @@ input[type="number"] {
   font-size: 1.1rem;
   color: $black;
 }
+
+.separator {
+  height: 0px;
+  width: 100%;
+  margin: 5px 0px;
+  border: solid 2px $dark-orange;
+}
