--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,3 +46,37 @@ input[type="number"] {
   margin: 5px 0px;
   border: solid 2px $dark-orange;
 }
+
+.data-display-container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 30% 70%;
+
+  .data-display-menu {
+    height: 100%;
+    overflow: hidden;
+
+    .selected-data-display {
+      margin: 10px auto;
+    }
+
+    .data-display-list {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      overflow: auto;
+
+      & > button {
+        margin: 10px;
+        width: calc(100% - 20px);
+      }
+    }
+  }
+
+  .data-display-details {
+    overflow: auto;
+    padding: 20px;
+  }
+}
