Added search of key in blocks page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,6 +32,8 @@ h1.title {
 
 a {
   color: $dark-orange;
+  cursor: pointer;
+  text-decoration: underline;
 
   &:hover {
     font-style: italic;
