Added contract origination feature in Settings

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,7 +41,8 @@ a {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+textarea {
   padding: 10px 20px;
   margin: 0px 10px;
   border: none;
